[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
wallpaper = "3.2.0"
wallpaper_control = {path = "../../packages/wallpaper_control"}
config = {path = "../../packages/config"}

[[bin]]
name = "wallpapercl"
path = "src/main.rs"
